# unleash-openfeature-rust-provider

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml  publish.yml
examples/: boolean_flag.rs
src/: lib.rs
tests/: contract.rs
