[package]
name = "unleash-openfeature-rust-provider"
version = "0.1.0-alpha.1"
edition = "2024"

[dependencies]
chrono = "0.4"
log = "0.4"
open-feature = { version = "0.3.0", features = ["serde_json"] }
serde_json = "1"
tokio = { version = "1", features = ["rt", "sync"] }
unleash-api-client = { version = "0.16.0", features = ["reqwest-client-rustls"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
unleash-types = "0.16.1"
